--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
         <div class="row">
           <div class="col-lg-4 d-flex align-items-stretch">
             <div class="content">
-              <h3>What is Medihelp</h3>
+              <h3>Hello Anamika </h3>
               <p>
-                Medihelp is the weservices which helps you stay healthy and fit , we plan your exercise and diet to make you healthy and fit . you also test your self using our virtual symptoms dectors.
+                Aman this side , I am giving you the sample of the project please review it and state the furthure update if it needed.
               </p>
               <div class="text-center">
                 <a href="#" class="more-btn">Register yourself<i class="bx bx-chevron-right"></i></a>
