--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
         <div class="row">
           <div class="col-lg-4 d-flex align-items-stretch">
             <div class="content">
-              <h3>Hello Anamika </h3>
+              <h3>Hello </h3>
               <p>
-                Aman this side , I am giving you the sample of the project please review it and state the furthure update if it needed.
+                This is web based portal for the health assistant
               </p>
               <div class="text-center">
                 <a href="#" class="more-btn">Register yourself<i class="bx bx-chevron-right"></i></a>
